# vending-machine

./: README.md
nix-conf/: configuration.nix  flake.nix  home.nix
vending-gui/: .gitignore  Cargo.toml  flake.nix  generate.py  wait.py
vending-gui/.direnv/: flake-profile-1-link
vending-gui/src/: main.rs
vending-keys-input/: flake.nix  main.py  requirements.txt
