[package]
name = "vending-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.2"
egui = "0.26.2"
egui_extras = {version = "0.26.2", features = ["svg"]}
env_logger = "0.11.3"
fast_qr = {version = "0.12.1", features = ["svg"]}
